<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-License-Identifier: Apache-2.0
-->
<resources>

    <string name="model_number_title">Model number</string>
    <string name="model_number_pref_title">Model number (SKU)</string>
    <string name="carrier_title">Software channel (carrier)</string>

    <!-- TurboPower Charging -->
    <string name="turbo_charge_title">TurboPower Charging</string>
    <string name="turbo_enable_title">Enable TurboPower Charging</string>
    <string name="turbo_charge_summary">Limit charging wattage to control heat during charging</string>
    <string name="turbo_charge_current_pref_title">Charging speed limit</string>
    <string name="turbo_mode_one">Slow (18W)</string>
    <string name="turbo_mode_two">Medium (33W)</string>
    <string name="turbo_mode_three">Max (68W)</string>
</resources>
