<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/turbo_charge_title">

    <com.android.settingslib.widget.TopIntroPreference
        android:key="turbo_top_intro"
        android:title="@string/turbo_charge_summary"/>

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="turbo_enable"
        android:title="@string/turbo_enable_title" />

    <PreferenceCategory
        android:key="turbo_current_category"
        android:title="@string/turbo_charge_current_pref_title"
        android:dependency="turbo_enable">

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="turbo_current_slow"
            android:title="@string/turbo_mode_one"
            android:persistent="false" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="turbo_current_medium"
            android:title="@string/turbo_mode_two"
            android:persistent="false" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="turbo_current_max"
            android:title="@string/turbo_mode_three"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
